k8s/patient/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: patient-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: patient-service
  template:
    metadata:
      labels:
        app: patient-service
    spec:
      containers:
        - name: patient-service
          image: 173763385083.dkr.ecr.ap-south-1.amazonaws.com/patient-service:latest
          ports:
            - containerPort: 3000
