k8s/patient/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: patient-service
spec:
  type: ClusterIP
  selector:
    app: patient-service
  ports:
    - port: 80
      targetPort: 8080
