k8s/patient/ingress-patient.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: patient-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # 🔥 REQUIRED – THIS WAS MISSING
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200"
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: patient-service
                port:
                  number: 80
